--- a/CHANGES
+++ b/CHANGES
@@ -101,6 +101,8 @@ Moved getExtension() from pUtil to FileHandling
 Importing getExtension() from FileHandling, in moveToExternal() (pUtil)
 Importing getExtension() from FileHandling instead of from pUtil (SiteInformation, ATLASSiteInformation, JobState, Mover, RunJob, RunJobEvent, SiteMover)
 Removed import of unused getExtension (NordugridSiteInformation)
+Moved dumpFile from pUtil to FileHandling
+Importing dumpFile (pUtil, Mover)
 
 Tracing report update
 - Added url and stateReason to getInitialTracingReport() (Mover)
