--- a/CHANGES
+++ b/CHANGES
@@ -143,6 +143,7 @@ DQ2 API to Rucio API migration:
 - Using getFiletypeFromDictionary() instead of calling isFileOnTape() in randomizeReplicas() (Mover)
 - Using replica.filetype instead of calling isFileOnTape() in sortReplicas(), two times (Mover)
 - Removed deprecated methods isFileOnTape() and isTapeSite() (SiteMover)
+- Now finishing tracing report in sitemover_get_data(), sitemover_get_all_data(), chirp_put_data(), sitemover_put_data() (Mover)
 
 Update info from Edward Karavakis:
 - Patch 2 for the permission problem/bug with ARC+HTCondor affecting RAL and RAPP
