--- a/CHANGES
+++ b/CHANGES
@@ -104,7 +104,7 @@ Removed import of unused getExtension (NordugridSiteInformation)
 Moved dumpFile from pUtil to FileHandling
 Importing dumpFile (pUtil, Mover)
 Moved readJSON and writeJSON from FAXSiteMover to FileHandling
-
+Created discoverAdditionalOutputFiles() (RunJob)
 Tracing report update
 - Added url and stateReason to getInitialTracingReport() (Mover)
 - Created prepareReport() that will replace the __sendReport() in the site movers (SiteMover)
@@ -116,7 +116,6 @@ Tracing report update
 - Storing tracing report in JSON file in prepareReport (SiteMover)
 - Now reading tracing report from file and finishing it in mover_get_data() (Mover)
 
-FIX PUT_DATA AS WELL
 
 REMOVE OTHERSITEMOVER FROM DIST
 HUSITEMOVER?
