--- a/CHANGES
+++ b/CHANGES
@@ -147,6 +147,9 @@ DQ2 API to Rucio API migration:
 - Using replica.filetype instead of calling isFileOnTape() in sortReplicas(), two times (Mover)
 - Removed deprecated methods isFileOnTape() and isTapeSite() (SiteMover)
 - Now finishing tracing report in sitemover_get_data(), sitemover_get_all_data(), chirp_put_data(), sitemover_put_data() (Mover)
+- Replaced getFileCatalog() with trivial function returning <rucio default> string, since it is no longer needed (ATLASExperiment, AMSTaiwanExperiment)
+- Returning empty list in getFileCatalogHosts() since it is no longer needed (ATLASExperiment, AMSTaiwanExperiment)
+- Now using c.declare_suspicious_file_replicas instead of dq2.declareSuspiciousFiles in reportFileCorruption() to declare corrupt file (SiteMover)
 
 Update info from Edward Karavakis:
 - Patch 2+3 for the permission problem/bug with ARC+HTCondor affecting RAL and RAPP
