Patch 4 for the permission problem/bug with ARC+HTCondor affecting RAL and RALPP

--- a/CHANGES
+++ b/CHANGES
@@ -153,7 +153,8 @@ DQ2 API to Rucio API migration:
 - Created test method bulkRegisterFilesNew() (SiteMover)
 
 Update info from Edward Karavakis:
-- Patch 2+3 for the permission problem/bug with ARC+HTCondor affecting RAL and RAPP
+- Patch 2+3 for the permission problem/bug with ARC+HTCondor affecting RAL and RALPP
+- Patch 4 for the permission problem/bug with ARC+HTCondor affecting RAL and RALPP
 
 Update info from Wen Guan:
 - Now using a reg exp instead of string comparison in matchCopyprefixReplica() to fix a problem with copyprefix pattern matching seen at BNL_EC2E1_MCORE (Mover)
