--- a/CHANGES
+++ b/CHANGES
@@ -19,6 +19,10 @@ Importing dumpFile (pUtil, Mover)
 Moved readJSON and writeJSON from FAXSiteMover to FileHandling
 Created discoverAdditionalOutputFiles() (RunJob)
 Now using discoverAdditionalOutputFiles() in __main__() (RunJob)
+Corrected several readpar -> self.readpar (SiteInformation)
+Created getObjectstoresList() and getObjectstoresField() (SiteInformation)
+Replaced all occurances of str(e) with e (pUtil)
+Now using local root setup in setup() (xrootdObjectstoreSiteMover)
 
 Tracing report update
 - Added url and stateReason to getInitialTracingReport() (Mover)
