--- a/CHANGES
+++ b/CHANGES
@@ -23,6 +23,7 @@ Corrected several readpar -> self.readpar (SiteInformation)
 Created getObjectstoresList(), getObjectstoresField(), getObjectstorePath(), getObjectstoreName() (SiteInformation)
 Replaced all occurances of str(e) with e (pUtil)
 Now using local root setup in setup() (xrootdObjectstoreSiteMover)
+Out-commented HLT related code in extractAppdir() (ATLASSiteInformation)
 
 Tracing report update
 - Added url and stateReason to getInitialTracingReport() (Mover)
