--- a/CHANGES
+++ b/CHANGES
@@ -28,6 +28,7 @@ Created getOSTransferDictionaryFilename() (FileHandling)
 Created addToOSTransferDictionary() (RunJobEvent)
 Now skipping pilot job kill when maximum batch system time limit has been reached and NO_PILOT_TIME_LIMIT_KILL is present in catchall, in __monitor_processes() (Monitor)
 Added getter and setter functions for taskID (RunJobEvent)
+readJSON() is now using openFile() and more similar to getJSONDictionary() (FileHandling)
 
 Tracing report update
 - Added url and stateReason to getInitialTracingReport() (Mover)
