Update - copytool dictionary

--- a/CHANGES
+++ b/CHANGES
@@ -30,8 +30,24 @@ readJSON() is now using openFile() and is more similar to getJSONDictionary() (F
 Created addToOSTransferDictionary(), getObjectstoresList(), getObjectstoresField(), getObjectstorePath(), getObjectstoreName(), getOSNames() (FileHandling)
 Created getOSJobMetrics() (PandaServerClient)
 Skipping killing bash process in killOrphans(), fixing a problem at e.g. RAL where batch logs went missing (processes)
-Created getCorrespondingLFNFromPFN() (Mover)
-Now using getCorrespondingLFNFromPFN() instead of basename of PFN in getFileInfo(). Requested by Rodney Walker after a problem seen at CERN-PROD with unexpected chars in PFN (Mover)
+Now using getLFN() instead of basename of PFN in getFileInfo(). Requested by Rodney Walker after a problem seen at CERN-PROD with unexpected chars in PFN (Mover)
+Now verifying size of work dir for all jobs, not only for user jobs, in __check_remaining_space() (Monitor)
+Now using getLFN() instead of basename of PFN in createPoolFileCatalog() (pUtil)
+Added lfns argument to createPoolFileCatalog() (pUtil)
+Sending lfns to createPoolFileCatalog() in getPoolFileCatalog(), getPoolFileCatalogNG() (Mover)
+Sending lfns to PFC4TURLs() from mover_get_data() (Mover)
+Added lfns argument to PFC4TURLs(), createPFC4TURLs() (Mover)
+Sending lfns to createPFC4TURLs() from PFC4TURLs() (Mover)
+Sending lfns to createPoolFileCatalog() from createPFC4TURLs() (Mover)
+Sending self.__job.inFiles to createPoolFileCatalog() from prepareHPCJob() (RunJobHpcEvent)
+Rewrote getLFN() to better support PFNs whose basename can contain additional characters than the LFN (pUtil)
+Now using getCopytoolIn() in getFileInfo() (Mover)
+Added copytool field to fileInfoDic in getFileInfo() (Mover)
+Now returning copytool_dictionary from getCatalogFileList(), received in getPoolFileCatalog() (Mover)
+Created getCopytoolDictionary() used by getCatalogFileList() (Mover)
+Now setting copytool_dictionary on a replica by replica basis in getCatalogFileList() (Mover)
+Now returning copytool_dictionary from getPoolFileCatalog(), received in getFileInfo() (Mover)
+Now returning copytool_dictionary from getFileInfo(), received in mover_get_data() (Mover)
 
 Tracing report update
 - Added url and stateReason to getInitialTracingReport() (Mover)
