--- a/CHANGES
+++ b/CHANGES
@@ -18,7 +18,7 @@ Moved readJSON and writeJSON from FAXSiteMover to FileHandling
 Created discoverAdditionalOutputFiles() (RunJob)
 Now using discoverAdditionalOutputFiles() in __main__() (RunJob)
 Corrected several readpar -> self.readpar (SiteInformation)
-Created getObjectstoresList(), getObjectstoresField(), getObjectstorePath(), getObjectstoreName() (SiteInformation)
+Created getField(), getNewQueuedata(), getObjectstoresList(), getObjectstoresField(), getObjectstorePath(), getObjectstoreName() (SiteInformation)
 Replaced all occurances of str(e) with e (pUtil)
 Now using local root setup in setup() (xrootdObjectstoreSiteMover)
 Out-commented HLT related code in extractAppdir() (ATLASSiteInformation)
@@ -27,7 +27,9 @@ Created FileHandling::addToOSTransferDictionary() used by RunJobEvent::transferT
 Now skipping pilot job kill when maximum batch system time limit has been reached and NO_PILOT_TIME_LIMIT_KILL is present in catchall, in __monitor_processes() (Monitor)
 Added getter and setter functions for taskID (RunJobEvent)
 readJSON() is now using openFile() and is more similar to getJSONDictionary() (FileHandling)
-Created addToOSTransferDictionary(), getObjectstoresList(), getObjectstoresField(), getObjectstorePath(), getObjectstoreName(), getOSNames() (FileHandling)
+Created addToOSTransferDictionary(), getObjectstoresList(), getObjectstoresField(), getObjectstorePath(), getOSNames() (FileHandling)
+Created getNewQueuedataFilename(), getNewQueuedata() (FileHandling)    MOVE??????
+Created getField(), getObjectstorePath()
 Created getOSJobMetrics() (PandaServerClient)
 Skipping killing bash process in killOrphans(), fixing a problem at e.g. RAL where batch logs went missing (processes)
 Now using getLFN() instead of basename of PFN in getFileInfo(). Requested by Rodney Walker after a problem seen at CERN-PROD with unexpected chars in PFN (Mover)
@@ -51,6 +53,32 @@ Renamed copytool() to getCopytool() (Mover)
 Extracting and returning copytool in extractInputFileInfo(), received in mover_get_data() (Mover)
 Updating sitemover object dynamically depending on which copytool to use in mover_get_data() (Mover)
 Removed sitemover argument from isFAXAllowed() (Mover)
+Removed readpar import from pUtil (SiteInformation)
+Added version argument to getQueuedataFileName(), readpar() (SiteInformation)
+Sending version to getQueuedataFileName() from readpar() (SiteInformation)
+readpar() is now using getField() if new queuedata version is requested (SiteInformation)
+Sending lfnList to getPoolFileCatalog() from getPoolFileCatalog() (RunJobEvent)
+Using setPilotlogFilename() in cleanup() to prevent problem with writing the pilotlog after workdir has been removed (pUtil)
+Added version argument to readpar() (pUtil)
+Now using getNewQueuedata() from handleQueuedata() (pUtil)
+Sending si object to getFilePathForObjectStore() from getFileInfo() and getDDMStorage() (Mover)
+Sending si object to getDDMStorage() from mover_put_data() (Mover)
+Added si argument to getDDMStorage() (Mover)
+Sending computingElement (queuename) to mover_get_data() from get_data() (Mover)
+Added queuename argument to mover_get_data(), getFileInfo() (Mover)
+Sending queuename to getFileInfo() from mover_get_data() (Mover)
+Added getter and setter for __queuename (SiteInformation)
+Using si.setQueueName() in mover_put_data() (Mover)
+Sending site.computingElement (queuename) to mover_put_data() from transferActualLogFile(), transferAdditionalFile() (JobLog)
+Sending site.computingElement (queuename) to mover_put_data() from moveLostOutputFiles() (pilot)
+Sending site.computingElement (queuename) to mover_put_data() from stageOut() (RunJob, RunJobEvent)
+Added queuename argument to mover_put_data() (Mover)
+Now using si.getObjectstorePath() in getFilePathForObjectStore() (Mover)
+Changed log order message in verifySetup() and stageOutFile(). Requested by Rodney Walker (xrdcpSiteMover)
+
+
+REMOVED IS_SECURE IN S3OBJECTSTORESITEMOVER
+
  
 Tracing report update
 - Added url and stateReason to getInitialTracingReport() (Mover)
