--- a/CHANGES
+++ b/CHANGES
@@ -96,7 +96,16 @@ Created getUtilityCommand() (Experiment, ATLASExperiment, AMSTaiwanExperiment, N
 Created getUtilityInfo() used by getNodeStructure() (PandaServerClient)
 Created getUtilitySubprocess() used by executePayload() (RunJob)
 Created getUtilityJSONFilename() used by getUtilityCommand() (NordugridATLASExperiment, ATLASExperiment, Experiment)
+Created shouldExecuteUtility() (NordugridATLASExperiment)
 Added support for memory monitor in __main__() (RunJobEvent)
+Added format argument to timeStampUTC() (pUtil)
+Created writeTimeStampToFile() (pUtil)
+Using writeTimeStampToFile() in getNewJob() (pilot)
+Copying the time stamp file from the init dir to the work dir in __createJobWorkdir() (Monitor)
+Reading back start time from file and adding it to node structure in getNodeStructure() (PandaServerClient)
+Created getEventIndexURL() (EventService)
+Sending url to getTokenExtractorProcess() from __main__() (RunJobEvent)
+Added heandling of url in getTokenExtractorProcess() (RunJobEvent)
 
 Tracing report update
 - Added url and stateReason to getInitialTracingReport() (Mover)
